[package]
name = "array_math"
version = "0.2.33"
edition = "2021"
license = "MIT"
description = "A selection of useful math operations on arrays"
repository = "https://github.com/sigurd4/array_math"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ndarray = ["slice_math/ndarray"]

[dependencies]
moddef = "0.2.2"
num = "0.4.1"
array__ops = {version = "0.1.19", features = ["std"]}
slice_math = "0.1.20"
#slice_math = {path = "../slice_math"}
#float_approx_math = "0.1.9"
#num_identities_const = "0.1.0"

[dev-dependencies]
plotters = "0.3.5"
rustfft = "6.2.0"